--- a/css/styles.css
+++ b/css/styles.css
@@ -125,8 +125,8 @@ a, a:visited, a:hover {
 }
 
 .bitnode {
-    color: #000000;
-    stroke: whitesmoke;
+    color: #d1c62f;
+    stroke: #000000;
     stroke-width: .3;
     opacity: .8;
 }
@@ -136,6 +136,13 @@ a, a:visited, a:hover {
     stroke: whitesmoke;
     stroke-width: .3;
     opacity: .8;
+}
+
+.cables {
+    line-width: 2;
+    line-color: #1556fc;
+    line-opacity: 1;
+    line-comp-op: overlay;
 }
 
 .scroll__text {
