--- a/css/styles.css
+++ b/css/styles.css
@@ -176,3 +176,18 @@ hr {
     font-size: 2rem;
     margin: 3rem auto;
 }
+
+.footer{
+  width: 100%;
+  height: 100px;
+  position: relative;
+  text-align: center;
+  vertical-align: middle;
+  padding: 15px;
+}
+
+.footer p{
+    color: #3b3b3b;
+    font-size: 1em;
+    font-weight: 300;
+  }
