--- a/css/styles.css
+++ b/css/styles.css
@@ -45,6 +45,7 @@ hr {
     text-transform: uppercase;
     font-weight: 900;
     letter-spacing: 0.05em;
+    text-shadow: #FC0 1px 0 10px;
 }
 
 .intro__dek {
@@ -170,6 +171,7 @@ hr {
     text-transform: uppercase;
     font-weight: 900;
     letter-spacing: 0.05em;
+    text-shadow: #FC0 1px 0 10px;
 }
 
 .outro__dek {
