--- a/css/styles.css
+++ b/css/styles.css
@@ -16,7 +16,7 @@ p, h1, h2, h3, h4, a {
 }
 
 a, a:visited, a:hover {
-    color: #f30;
+    color: #3b3b3b;
     text-decoration: none;
     border-bottom: 1px solid currentColor;
 }
@@ -127,7 +127,6 @@ hr {
     padding: 1rem;
     font-size: 1.5rem;
     margin: 1rem;
-    text-shadow: #FC0 1px 0 10px;
 }
 
 #interactivemap {
