--- a/css/styles.css
+++ b/css/styles.css
@@ -77,13 +77,13 @@ hr {
 }
 
 .scroll__graphic .scrollmap {
-  position: absolute;
-  fill: #494747;
-  right: 1rem;
-  top: 0;
-  -moz-transform: translateY(0);
-  -webkit-transform: translateY(0);
-  transform: translateY(0);
+    position: absolute;
+    fill: #494747;
+    right: 1rem;
+    top: 0;
+    -moz-transform: translateY(0);
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
 }
 
 .bitnode {
@@ -103,7 +103,7 @@ hr {
 .cables {
     fill: none;
     stroke: #163bd6;
-    stroke-dasharray: 2,1;
+    stroke-dasharray: 2, 1;
     stroke-linejoin: round;
     opacity: 0;
 }
@@ -154,6 +154,12 @@ hr {
     min-width: 140px;
     font-size: 140%;
     white-space: normal;
+    padding: 6px 12px 3px;
+    color: whitesmoke;
+    background: rgba(75, 75, 75, 0.8);
+    border-radius: 1px;
+    pointer-events: none;
+    opacity: 0;
 }
 
 #outro {
@@ -179,17 +185,17 @@ hr {
     margin: 3rem auto;
 }
 
-.footer{
-  width: 100%;
-  height: 100px;
-  position: relative;
-  text-align: center;
-  vertical-align: middle;
-  padding: 15px;
+.footer {
+    width: 100%;
+    height: 100px;
+    position: relative;
+    text-align: center;
+    vertical-align: middle;
+    padding: 15px;
 }
 
-.footer p{
+.footer p {
     color: #3b3b3b;
     font-size: 1em;
     font-weight: 300;
-  }
+}
