--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@ html, body {
 body {
     min-height: 1280px;
     font-weight: 300;
-    background-color: #dadada;
+    background-color: #f1f1f1;
     color: #2a2a2a;
 }
 
